--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Ekaterina Blinova",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "eslint": "^6.6.0",
     "html-webpack-plugin": "^3.2.0",
